Fix position of clipping icon and fix tipsy arrows on the search page (weren't being placed in the proper position).

--- a/app/stylesheets/design/_page.scss
+++ b/app/stylesheets/design/_page.scss
@@ -346,7 +346,7 @@ ARTICLE VIEW
   }   
 .metadata_share_bar .share ul li:first-child,
 .metadata_share_bar .share ul li.first {
-  padding-right: 64px;
+  padding-right: 35px;
   }
 
 #entries.show .back_to_top {
